--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SERVER_BASE_URL="http://localhost:3000"
+SERVER_BASE_URL="http://192.168.1.23:3000"
 AVATARS_DIR="public/avatars"
 AVATARS_URL="avatars"
